# Vectroscopy

./: README.md  pyproject.toml  yaml_config_guide.md
examples/: basic_usage.py
vectroscopy/: __main__.py  file_handler.py  parameter.py  vectroscopy.py
vectroscopy/config/: config.py  file_utilities.py  output_manager.py  parameter_manager.py  process_manager.py
vectroscopy/config_files/: JPL_config.yaml  config.yaml
vectroscopy/processing/: processing_pipeline.py  raster_processor.py  vectorization.py
vectroscopy/raster_ops/: raster_edit.py  raster_filters.py  raster_utils.py
vectroscopy/vector_ops/: vectorize.py  zonal_stats.py
