[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectroscopy"
version = "0.1.2"
description = "A Python package for vectorized raster data by threshold."
authors = [{ name = "Tahn Jandai", email = "taja6898@colorado.edu" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["raster", "vectorization", "gis", "remote-sensing", "geospatial"]

dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "rioxarray",
    "rasterio",
    "scipy",
    "geopandas>=0.10.0",
    "affine>=2.3.0",
    "exactextract",
    "dask",
    "scikit-image",
    "pyyaml",
    "psutil",
    "bottleneck",
    "tqdm",
    "pyproj",
    "matplotlib",
    "importlib-resources; python_version<'3.9'",
]

[project.scripts]
vectroscopy = "vectroscopy.__main__:main"

[project.urls]
Homepage = "https://github.com/Tahn04/vectroscopy"
"Bug Reports" = "https://github.com/Tahn04/vectroscopy/issues"
"Source" = "https://github.com/Tahn04/vectroscopy"

[tool.setuptools.packages.find]
where = ["."]
include = ["vectroscopy*"]

[tool.setuptools.package-data]
vectroscopy = ["config_files/*.yaml"]
